#2709487 by DamienMcKenna: Fixed link paths in contextual menus.
#2600178 by joelstein: Some $cache_key values may only have two parts.
#2472519 by joelstein, DamienMcKenna: View mode substitution wasn't working
  correctly.
#2757277 by DamienMcKenna: Resetting a display didn't work correctly.
#2282605 by joelstein: Support for the core search system's custom view modes.


Panelizer 7.x-3.2-beta1, 2015-02-02
-----------------------------------
#2203629 by DamienMcKenna: Require the latest releases of CTools and Panels.
#2408903 by Andrew M Riley: IPE not saving correctly.
#2410363 by mrjmd: Add ability to edit machine names.
#2408811 by DamienMcKenna: Improved warning when Page Manager is disabled for an
  entity view mode but is required in order for the view mode to work correctly.
#2190839 by DamienMcKenna, annya: Improved panelizer_uninstall() to remove all
  variables.
#1929000 by arnested, mglaman, DamienMcKenna: Added a new hook that is
  triggered before a default Panelizer object is removed:
  hook_panelizer_delete_default()
#1493296 by DamienMcKenna, mglaman, lpalgarvio: Moved the main config page.
#2408691 by DamienMcKenna: Don't assume that a revision ID is submitted to the
  panelizer_panels_cache_get function, when viewing a published node it will
  only contain the entity ID.
#2408301 by DamienMcKenna: Displays not saving for entities without an existing
  {panelizer_entity} record.
#2246175 by das-peter, DamienMcKenna: Add contextual links to node templates.
#2337767 by devendra.yadav, mglaman: Fixed some db_queries that didn't use
  arguments correctly.
#2157701 by DamienMcKenna: UX: Use of word 'panel' is confusing when referring
  to each Panelizer display.
#1812658 by DamienMcKenna: Renamed 'Panelizer' tab to 'Customize display'.
#1798294 by DamienMcKenna, michielnugter: Follow-up to resolve issues creating
  new revisions.
#2362651 by DamienMcKenna, drupalninja99: Add revision support to IPE
  integration.